--- a/src/pop.html
+++ b/src/pop.html
@@ -1,122 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <style>
-
-        body {
-            margin: 0;
-            color: #345;
-            font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,\\5FAE\8F6F\96C5\9ED1,Arial,sans-serif;
-            font-size: 9pt;
-        }
-        body * {
-            white-space: nowrap;
-        }
-        #about {
-            font-size: 10pt;
-            padding: 10px 20px;
-        }
-        .header{
-            width: 290px;
-            height: 90px;
-        }
-        .header .logo{
-            float:left;
-            margin-bottom: 20px;
-        }
-        .header .logo-content {
-            float:left;
-            margin-left: 10px;
-            padding-top: 5px;
-        }
-        .header .title{
-            font-size:24px;
-            margin: 0px 5px;
-        }
-        .header .sub-title{
-            font-size:16px;
-            margin: 0px 5px;
-        }
-        #about a {
-            cursor: pointer;
-            text-decoration: blink;
-            color: #4285f4;
-            outline : none;
-        }
-        #about .footer {
-            height: 15px;
-            color: #789;
-            margin: 5px;
-            padding-top: 5px;
-            border-top: solid 1px #eef;
-            white-space: nowrap;
-        }
-        #about #tips{
-            color: red;
-            font-size: 16px;
-            display: block;
-            padding-bottom: 5px;
-        }
-        #settings:after {
-            display: inline-block;
-            content: " ";
-            width: 100%;
-            height: 100%;
-         }
-        .popup_copyright{
-            text-align: center;
-        }
-        #settings{
-            display: inline-block;
-            width: 25px;
-            height: 25px;
-            float: right;
-            margin-top: -22px;
-        }
-    </style>
+    <meta charset="utf-8">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <script src="src/js/lib/jquery_1.9.1.js"></script>
+    <script src="src/js/pop.js"></script>
 </head>
-<body>
-<div id="about">
-    <div class="header">
-         <div class="logo-content">
-            <p class="title">Let's Google!</p>
-            <p class="sub-title">上谷歌！</p>
-         </div>
-    </div>
-    <div class="body">
-        <div id="developer">
-            <div class="name">
-                <span>免费访问：<a target="_blank" href="https://www.google.com.hk">谷歌搜索</a>，<a target="_blank" href="https://mail.google.com/mail/">Gmail邮箱</a>，<a target="_blank" href="https://chrome.google.com/webstore/category/extensions?hl=zh-CN">Chrome商店</a> </span>
-            </div>
-        </div>
-        <div style="margin-bottom: 15px;">
-            <span>应急操作：<a id="refreshP" href="#">刷新</a>&nbsp;&nbsp;&nbsp;<a id="restartP" href="#">重启</a>&nbsp;&nbsp;&nbsp;<a id="stopP" href="#" style="display: none;">暂停</a><a id="startP" href="#">启动</a></span>
-        </div>
-        <div id="onStatus" style="display: none">
-        </div>
-        <div>
-            <span>如果还不能访问，可以试试刷新或者重启</span><br>
-            <span>如果要使用其他代理而不冲突，可以点击暂停</span>
-        </div>
-        <div id="offStatus" style="display: block;">
-            <span id="tips">谷歌访问助手已经暂停，点击启动运行</span>
-        </div>
-
-        <span>
-                    <e href="" id="openMainWebsite" data-i18n-content="popup_switchyWebPage">用户交流和反馈QQ群：251844331</e>
-                </span>
-        <br>
-        <br>
-    </div>
-    <div class="footer">
-        <div class="popup_copyright">
-            © 2018 <a target="_blank" href="http://www.ggfwzs.com/">谷歌访问助手</a>
-        </div>
-        <a id="settings" href="#"></a>
-    </div>
+<body class="desktop default">
+<div class="main">
+    <div class="title">Let's Google!</div>
+    <ul class="list">
+        <li class="option" id="start"><span>启动</span></li>
+        <li class="option" id="stop"><span>停止</span></li>
+        <li class="option" id="setting" ><span>帮助&设置</span></li>
+    </ul>
 </div>
+<div id="pop-tips" class="pop-tips"></div>
+<div style="clear: both; height: 0;"></div>
 
 
 </body>
