--- a/src/pop.html
+++ b/src/pop.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="src/js/lib/jquery_1.9.1.js"></script>
-    <script src="src/js/pop.js"></script>
+    <script src="source/js/lib/jquery_1.9.1.js"></script>
+    <script src="source/js/pop.js"></script>
 </head>
 <body class="desktop default">
 <div class="main">
