修改加载时会自动弹出的bug

--- a/src/options.html
+++ b/src/options.html
@@ -1,33 +1,39 @@
 <!doctype html>
 <html>
+
 <head>
     <title> Let's Google! </title>
     <link rel='stylesheet' type='text/css' href='options.css'>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script src="source/js/lib/jquery_1.9.1.js"></script>
 </head>
+
 <body>
-<div id='content'>
-    <h1> Let's Google! </h1>
-    <p class='info'>提供google搜索，谷歌chrome浏览器商店，gmail邮箱提供加速服务</p>
-    <br>
-    <p class="tips">为了维护服务器费用，使用插件时会自动打开www.2345.com主页。</p>
-    <table id='options'>
-        <tr>
-            <td><input type='checkbox' id='agreeOpenHome'/></td>
-            <td>我同意自动打开主页</td>
-        </tr>
-        <tr>
-            <td><input type='checkbox' id='autoProxy'/></td>
-            <td>跟随浏览器一同启动</td>
-        </tr>
-    </table>
-</div>
-<div id='footer'>
-    <p> &copy;2018 - 上谷歌 </p>
-    <p> 仅为科研,外贸提供帮助。不保证100%可用，仅交流学习使用。 </p>
-</div>
+    <div id='content'>
+        <h1> Let's Google! </h1>
+        <p class='info'>提供google搜索，谷歌chrome浏览器商店，gmail邮箱提供加速服务</p>
+        <br>
+        <p class="tips">为了维护服务器费用，使用插件时会自动打开www.2345.com主页。</p>
+        <table id='options'>
+            <tr>
+                <td>
+                    <input type='checkbox' id='agreeOpenHome' />
+                </td>
+                <td>我同意打开主页</td>
+            </tr>
+            <tr>
+                <td>
+                    <input type='checkbox' id='autoProxy' />
+                </td>
+                <td>跟随浏览器一同启动</td>
+            </tr>
+        </table>
+    </div>
+    <div id='footer'>
+        <p> &copy;2018 - 上谷歌 </p>
+        <p> 仅为科研,外贸提供帮助。不保证100%可用，仅交流学习使用。 </p>
+    </div>
 </body>
 <script src="source/js/options.js"></script>
-</html>
 
+</html>
