--- a/src/pop.html
+++ b/src/pop.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
     <script src="source/js/lib/jquery_1.9.1.js"></script>
     <script src="source/js/pop.js"></script>
 </head>
+
 <body class="desktop default">
-<div class="main">
-    <div class="title">Let's Google!</div>
-    <ul class="list">
-        <li class="option" id="start"><span>启动</span></li>
-        <li class="option" id="stop"><span>停止</span></li>
-        <li class="option" id="setting" ><span>帮助&设置</span></li>
-    </ul>
-</div>
-<div id="pop-tips" class="pop-tips"></div>
-<div style="clear: both; height: 0;"></div>
+    <div class="main">
+        <div class="title">Let's Google!</div>
+        <ul class="list">
+            <li class="option" id="start">
+                <span>启动</span>
+            </li>
+            <li class="option" id="stop">
+                <span>停止</span>
+            </li>
+            <li class="option" id="setting">
+                <span>帮助&设置</span>
+            </li>
+        </ul>
+    </div>
+    <div id="pop-tips" class="pop-tips"></div>
+    <div style="clear: both; height: 0;"></div>
 
 
 </body>
+
 </html>
