'修改工程路径'

--- a/src/source/options.html
+++ b/src/source/options.html
@@ -5,7 +5,7 @@
     <title> Let's Google! </title>
     <link rel='stylesheet' type='text/css' href='options.css'>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="source/js/lib/jquery_1.9.1.js"></script>
+    <script src="js/lib/jquery_1.9.1.js"></script>
 </head>
 
 <body>
@@ -34,6 +34,6 @@
         <p> 仅为科研,外贸提供帮助。不保证100%可用，仅交流学习使用。 </p>
     </div>
 </body>
-<script src="source/js/options.js"></script>
+<script src="js/options.js"></script>
 
 </html>
