--- a/src/source/pop.html
+++ b/src/source/pop.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <script src="source/js/lib/jquery_1.9.1.js"></script>
-    <script src="source/js/pop.js"></script>
+    <script src="js/lib/jquery_1.9.1.js"></script>
+    <script src="js/pop.js"></script>
 </head>
 
 <body class="desktop default">
